--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
-        <title>openstreetmap</title>
+        <title>osmhelper</title>
         <script src="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css" />
         <script>
